# transfer-research

./: .gitignore  LICENSE  README.md  datasets.py  main.py  models.py  mypy.ini  pyproject.toml  transfer_pls.py  utils.py
dpls/: models.py  utils.py
src/model/: __init__.py  __main__.py  datasets.py  mgdpls.py
src/model/dpls/: models.py
src/plots/: __init__.py  __main__.py  radar.py  read.py  types.py
